# GraphicsProjTempName

./: .gitignore  CMakeLists.txt  Initial project ideas.md  Project Road map.md  README.md  test.sh
.obsidian/: workspace.json
shaders/: triangle.vert
src/app/: main.cpp
src/core/: Application.cpp  Application.hpp  MonoBehaviour.hpp  ShaderLoader.cpp
src/ecs/: ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  SystemManager.hpp
src/platform/: Window.cpp  Window.hpp
