cmake_minimum_required(VERSION 3.10)
project(OpenGLEngine LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY \${CMAKE_BINARY_DIR}/bin)

# add your subprojects or source files here, for example:
# add_executable(engine src/app/main.cpp)
# target_link_libraries(engine PRIVATE glfw glad glm)

